<resources>
    <string name="app_name">Newsing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apikey">e58f98432d0fe7144b7cfc0cfffc35a1</string>
    <string name="action_settings">设置</string>
    <string name="beauty_item_shared">beautySharedImage</string>
    <string name="url">http://v.juhe.cn/toutiao/index</string>

    <string name="action_collect">收藏</string>
    <string name="action_share">分享</string>

    <string name="beauty_header_text2">松开刷新</string>
    <string name="beauty_header_text1">下拉刷新</string>

    <string name="beauty_footer_text2">松开加载更多</string>
    <string name="beauty_footer_text1">上滑加载更多</string>

    <string name="action_collect_ok">收藏成功</string>
    <string name="action_collect_failed">收藏失败,已收藏</string>

    <string name="nav_android">图灵机器人</string>
    <string name="nav_weather">天气预言员</string>

    <string name="my_newsing">个性化</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_about">关于</string>


    <string name="tr_prefix">Hi，我是图灵，小主人有何吩咐？</string>
    <string name="tr_notxt">图灵并不想回答。</string>
    <string name="tr_error">图灵根本不想理你，并向你抛了一个异常。</string>
    <string name="tr_send">发送</string>
</resources>
