<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/nav_android"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_android"
            />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_weather" />
        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

    <item android:title="@string/my_newsing">
        <menu>
            <item
                android:id="@+id/nav_mycollect"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/my_collect"
                />
            <item
                android:id="@+id/nav_myabout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/my_about" />
        </menu>
    </item>

</menu>
